prevent map image from overflowing

--- a/galeriehome/static/home/styles/pages/access.less
+++ b/galeriehome/static/home/styles/pages/access.less
@@ -29,3 +29,10 @@
         .default-info( 1.4em );
     }
 }
+
+
+#simple-map {
+    img {
+        max-width: 100%;
+    }
+}
